--- a/hello.html
+++ b/hello.html
@@ -5,5 +5,10 @@
     </head>
     <body>
         <p>Hello world</p>
+        <ul>
+            <li>Dogs</li>
+            <li>Cats</li>
+            <li>Snakes</li>
+        </ul>
     </body>
 </html>
