--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,9 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>First Website</title>
+        <title>My first website</title>
     </head>
     <body>
-        <p>Hello world</p>
-        <ul>
-            <li>Dogs</li>
-            <li>Cats</li>
-            <li>Snakes</li>
-        </ul>
+    <p>Hello World</p>
     </body>
 </html>
