added hello world

--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>My first website</title>
+    <title>My first website</title>
     </head>
     <body>
-    <p>Hello World</p>
+    <p>Hello world</p>
     </body>
 </html>
